--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to help you improve your sales.
+heading: Not just yet...
+description: Beta access coming soon!
 
 map:
   latitude: -45.8787605
