--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Our most advanced Discord NFT bot
+description: Analyse The Hype - Inform Your Team
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
+		<h1 class="editable">Sherlock is our most advanced <strong>NFT Discord bot yet</strong></h1>
+		<p class="subtext editable">Anaylse the hype and inform your team </strong>in real time.</strong></p>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get beta access</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/dashboard.jpg" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -17,11 +17,11 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>How can we <strong>maximise</strong> our community's growth?</h2>
+				<p>Sherlock is built for your community. By having a holistic understanding of your community of hodlers or utilitarians, Sherlock provides the most relevant metrics.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/dashboard.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -29,11 +29,11 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>How can I <strong>stay informed</strong> on my collections?</h2>
+				<p>Sherlock monitors your NFT collections for activity. By analyzing activity, Sherlock knows when to inform you of meaningful events.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/dashboard.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -41,29 +41,17 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>How can I <strong>forecast</strong> our growth?</h2>
+				<p>Sherlock doesn't just learn from your community. It harnesses the power of all connected communities.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
+				<img src="{{ site.baseurl }}/images/dashboard.jpg" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable"><strong>Grow</strong> your community.</h2>
+		<div class="button alt"><a href="{{ site.baseurl }}/contact">Get beta access</a></div>
 	</section>
 </div>
